corrections et nettoyage

--- a/4.2_OF3.html
+++ b/4.2_OF3.html
@@ -2611,9 +2611,9 @@ src="images/FCE.PNG" /> </br><br />
 Visualisation des OF de la région</a></p>
 </div>
 </div>
-<div id="pour-en-savoir-plus" class="section level1"
-data-orientation="rows" data-icon="fa-info-circle" font-size="25px">
-<h1>Pour en savoir plus</h1>
+<div id="en-savoir" class="section level1" data-orientation="rows"
+data-icon="fa-info-circle" font-size="25px">
+<h1><em>En savoir</em> <strong>+</strong></h1>
 <div id="row-2" class="section level2" data-height="20">
 <h2>Row</h2>
 </div>
@@ -2758,7 +2758,7 @@ options(knitr.table.format = "html")
 [![](images/FCE.PNG) </br>\
 Visualisation des OF de la région](https://pierre-stephanelebre.shinyapps.io/FCEshiny/)
 
-# Pour en savoir plus {data-orientation="rows" data-icon="fa-info-circle" font-size="25px"}
+# *En savoir* **+** {data-orientation="rows" data-icon="fa-info-circle" font-size="25px"}
 
 ## Row {data-height="20"}
 
@@ -2767,6 +2767,7 @@ Visualisation des OF de la région](https://pierre-stephanelebre.shinyapps.io/FC
 **Cartographie interactive**\
 [![](images/FCE.PNG) </br>\
 Visualisation des OF de la région](https://pierre-stephanelebre.shinyapps.io/FCEshiny/)
+
 
 # Navigation {data-orientation="rows" data-icon="fa-map-signs" font-size="25px"}
 
