réécriture lisez-moi

--- a/Lisez-moi.html
+++ b/Lisez-moi.html
@@ -434,42 +434,83 @@ div.tocify {
 </div>
 
 
+<div
+id="chiffres-clés-jeunesse-engagement-et-sports-de-bourgogne-franche-comté"
+class="section level1">
+<h1>Chiffres Clés Jeunesse Engagement et Sports de
+Bourgogne-Franche-Comté</h1>
+<div
+id="page-du-projet-chiffes-clés-de-la-délégation-régionale-et-académique-à-la-jeunesse-à-lengagement-et-aux-sports-de-bourgogne-franche-comté-drajes-bfc"
+class="section level2">
+<h2>Page du projet Chiffes Clés de la Délégation Régionale et Académique
+à la Jeunesse, à l’Engagement et aux Sports de Bourgogne-Franche-Comté
+(DRAJES BFC)</h2>
+</div>
+<div id="origine" class="section level2">
+<h2>Origine</h2>
+<p>Longtemps réalisés sous forme de livrets papiers à destinations des
+acteurs de la Jeunesse et du Sport, les chiffres clés JES font peau
+neuve sous la forme de pages en ligne, de tableaux mis en forme, de
+cartes dynamiques et d’infographies interactives. Cet ensemble de pages
+statiques vise à faciliter la connaissance de la région sur les
+thématiques de la Jeunesse, de la Vie Associative et de l’Engagement, du
+Sport.</p>
+</div>
+<div id="descritpion" class="section level2">
+<h2>Descritpion</h2>
+<p>Les thématiques sont abordées sous l’angle territorial et proposent,
+le plus souvent, des comparaisons régionales, départementales et
+infra-départementales parfois. Chaque illustration et carte ont fait
+l’objet d’une réflexion particulière afin de lire immédiatement les
+messages principaux. Cependant, un grand nombre d’indicateurs ont été
+mis en forme pour compléter les analyses. La plupart des données sont
+open source, les autres sont fournies par la MEDES (mission études,
+données et enquêtes statistiques de l’Injep) qui se charge de produire
+les données pour le territoire national.</p>
+</div>
 <div id="fonctionnement" class="section level2">
 <h2>Fonctionnement</h2>
-<div
-id="pour-consulter-les-chiffres-clés-depuis-votre-poste-téléchargez-le-fichier-zip-ou-7z-_site-et-décompressez-le-à-lendroit-de-votre-choix.-ouvrez-ensuite-le-fichier-drajesbfc.html-il-fait-le-lien-vers-les-autres-documents-du-dossier-doit-souvrir-dans-un-navigateur-type-firefox."
-class="section level4">
-<h4>Pour consulter les chiffres clés depuis votre poste, téléchargez le
-fichier zip ou 7z <strong><em>_site</em></strong> et décompressez le à
-l’endroit de votre choix. Ouvrez ensuite le fichier
-<u><strong>DRAJESBFC.html</strong></u>, il fait le lien vers les autres
-documents du dossier (doit s’ouvrir dans un navigateur type
-Firefox).</h4>
-</div>
-</div>
-<div id="contenu" class="section level2">
-<h2>Contenu</h2>
-<p>Ce document se présente comme un site interactif et dynamique. Il
-balaie l’ensemble des thèmes de la DRAJES et propose des comparaisons
-régionales, départementales et infra-départementales lorsque cela est
-possible. Il s’appuie sur des bases de données open source et sur les
-données de cadrage fournies par la MEDES (mission études, données et
-enquêtes statistiques de l’Injep).</p>
-<p>Le bandeau du haut présente l’échelon territorial (région,
-département, EPCI et bassins de vie), et, selon les sujets, des pages
-supplémentaires. On y trouve également une rubrique « Pour en savoir
-plus » qui pointe vers d’autres sites externes et « Navigation » qui
-permet de changer de page sans passer par « Accueil ».</p>
+<p>La plupart des pages présentent un bandeau supérieur permettant de
+choisir l’échelon territorial (région, département, EPCI et bassins de
+vie), et, selon les sujets, des pages supplémentaires. On y trouve
+également une rubrique « En savoir +» qui pointe vers d’autres sites
+externes et à droite se trouve un renvoi à « Accueil » qui vous
+permettra de naviguer dans les différents thèmes.</p>
 <p>Dans chaque page, un bloc « Données générales » apporte quelques
 informations générales à retenir. Les autres blocs présentent les
 données selon un système d’onglets explicites : tableaux de données,
 graphiques de comparaisons et cartes. Les cartes sont dynamiques et
 cliquables, la plupart des graphiques également.</p>
+</div>
+<div id="maintenance-et-mises-à-jour" class="section level2">
+<h2>Maintenance et mises à jour</h2>
+<p>Elles se font au fil de l’eau en fonction des disponibilités des
+données open source et de la charge de travail. Il ne saurait y avoir de
+roadmap pour l’instant.</p>
+</div>
+<div id="contributions" class="section level2">
+<h2>Contributions</h2>
+<p>Toute contribution ou proposition d’amélioration sera lue avec
+intérêt.</p>
 <p>Lors de votre navigation, vous pouvez faire remonter vos remarques ou
 tout problème de mise en page (faute de frappe, source illisible ou
 manquante, proposition d’amélioration…) sur mon mail : <a
-href="mailto:pierre-stephane.lebre@ac-dijon.fr"
-class="email">pierre-stephane.lebre@ac-dijon.fr</a></p>
+href="mailto:pierre-stephane.lebre@ac-dijon.fr">pierre-stephane.lebre@ac-dijon.fr</a></p>
+<p>Vous pouvez également cloner le projet ou faire remonter vos
+remarques et propositions d’améliorations sur la boîte fonctionnelle <a
+href="mailto:ce.drajes.observation@region-academique-bourgogne-franche-comte.fr">ce.drajes.observation@region-academique-bourgogne-franche-comte.fr</a></p>
+<!-- -->
+<pre><code>https://github.com/DRAJES/chiffres_cles.github.io.git</code></pre>
+</div>
+<div id="auteur" class="section level2">
+<h2>Auteur</h2>
+<p>Ce site a été pensé, créé et alimenté par PS Lèbre, statisticien
+Insee pour la DRAJES BFC.</p>
+</div>
+<div id="license" class="section level2">
+<h2>License</h2>
+<p>Pas pour le moment…</p>
+</div>
 </div>
 
 
