réécriture lisez-moi

--- a/0_about.html
+++ b/0_about.html
@@ -12,7 +12,7 @@
 <meta name="author" content="PSLèbre" />
 
 
-<title>About This Website</title>
+<title>à propos de ce site</title>
 
 <script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -339,7 +339,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="0_about.html">
+  <a href="Lisez-moi.html">
     <span class="fa fa-info"></span>
      
     A propos
@@ -427,7 +427,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">About This Website</h1>
+<h1 class="title toc-ignore">à propos de ce site</h1>
 <h4 class="author">PSLèbre</h4>
 
 </div>
