--- a/Lisez-moi.html
+++ b/Lisez-moi.html
@@ -339,7 +339,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="0_about.html">
+  <a href="Lisez-moi.html">
     <span class="fa fa-info"></span>
      
     A propos
