--- a/DRAJESBFC.html
+++ b/DRAJESBFC.html
@@ -332,7 +332,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="0_about.html">
+  <a href="Lisez-moi.html">
     <span class="fa fa-info"></span>
      
     A propos
