ajout du détail dans le sommaire

--- a/DRAJESBFC.html
+++ b/DRAJESBFC.html
@@ -431,14 +431,14 @@ aux Sports (<strong>DRAJES</strong>) anime et coordonne les politiques
 publiques <strong>du sport</strong>, de <strong>la jeunesse</strong>, de
 <strong>la vie associative</strong>, de <strong>l’engagement
 civique</strong> et de <strong>l’éducation populaire</strong>.</p>
-<p>Elle s’appuie pour cela sur les données de la <strong><a
-href="https://injep.fr/linstitut/missions/mission-enquetes-donnees-et-etudes-statistiques-medes/">MEDES</a></strong>
-(Missions Enquêtes, Données et Etudes Statistiques) de <strong><a
-href="https://injep.fr/">l’Injep</a></strong> (Institut national de la
-Jeunesse et de l’éducation Populaire). Ce Service Statistique
+<p>Elle s’appuie pour cela sur les données de la <a
+href="https://injep.fr/linstitut/missions/mission-enquetes-donnees-et-etudes-statistiques-medes/"><strong>MEDES</strong></a>
+(Missions Enquêtes, Données et Etudes Statistiques) de <a
+href="https://injep.fr/"><strong>l’Injep</strong></a> (Institut national
+de la Jeunesse et de l’éducation Populaire). Ce Service Statistique
 Ministériel (<strong>SSM</strong>) fait partie du Service Statistique
-Public (<strong><a
-href="https://www.insee.fr/fr/information/1302192">SSP</a></strong>)
+Public (<a
+href="https://www.insee.fr/fr/information/1302192"><strong>SSP</strong></a>)
 chargé d’outiller les ministères sur leurs besoins d’études, d’enquêtes
 et de données. Porté par l’Insee, le SSP assure
 <strong>l’indépendance</strong>, la <strong>fiabilité</strong>, la
@@ -449,12 +449,16 @@ publiées.</p>
 <h2>1. <strong>Généralités</strong></h2>
 <div id="territoires" class="section level3">
 <h3>1.1 <a href="1.1_demo.html">Territoire(s)</a></h3>
+<p>Population / Communes / Densité / ZRR / QPV / Appartenance
+géographique / CRTE</p>
 </div>
 <div id="structure-de-la-population" class="section level3">
 <h3>1.2 <a href="1.2_structure.html">Structure de la population</a></h3>
+<p>15-29 ans / + de 65 ans / indice de jeunesse</p>
 </div>
 <div id="évolution-de-la-population" class="section level3">
 <h3>1.3 <a href="1.3_evol.html">Évolution de la population</a></h3>
+<p>évolution sur 5 ans par tranche d’âge / tendance longue</p>
 <hr />
 </div>
 </div>
@@ -462,12 +466,17 @@ publiées.</p>
 <h2>2. <strong>Jeunesse</strong></h2>
 <div id="jeunesse-1" class="section level3">
 <h3>2.1 <a href="2.1_jeunesse.html">Jeunesse</a></h3>
+<p>15-29 ans / 16-25 ans / évolution</p>
 </div>
 <div id="préscolaire" class="section level3">
 <h3>2.2 <a href="2.2_presco.html">Préscolaire</a></h3>
+<p>Accueils collectifs / accueil familial / taux de scolarisation /
+Assistantes maternelles / garde d’enfants à domicile</p>
 </div>
 <div id="accueils-collectifs-de-mineurs" class="section level3">
 <h3>2.3 <a href="2.3_ACM.html">Accueils collectifs de mineurs</a></h3>
+<p>Avec hébergement / Sans hébergement / Scoutisme / lieux d’accueil /
+places par groupe d’âge</p>
 <hr />
 </div>
 </div>
@@ -475,9 +484,12 @@ publiées.</p>
 <h2>3. <strong>Engagement</strong></h2>
 <div id="vie-associative" class="section level3">
 <h3>3.1 <a href="3.1_VA.html">Vie associative</a></h3>
+<p>Nombre et taux d’association / Domaine d’intervention</p>
 </div>
 <div id="service-civique" class="section level3">
 <h3>3.2 <a href="3.2_SC.html">Service civique</a></h3>
+<p>Nombre et évolution / domaine de mission / âge, diplôme, emploi /
+missions à l’étranger / QPV</p>
 <hr />
 </div>
 </div>
@@ -485,9 +497,12 @@ publiées.</p>
 <h2>4. <strong>Formation</strong></h2>
 <div id="diplômes" class="section level3">
 <h3>4.1 <a href="4.1_diplomes.html">Diplômes</a></h3>
+<p>Diplômes délivrés / par sexe, par âge / BAFA/BAFD / Insertion des
+diplômés</p>
 </div>
 <div id="organismes-de-formation" class="section level3">
 <h3>4.2 <a href="4.2_OF3.html">Organismes de formation</a></h3>
+<p>Carte interactive des OF de la région</p>
 <hr />
 </div>
 </div>
@@ -495,18 +510,27 @@ publiées.</p>
 <h2>5. <strong>Sport</strong></h2>
 <div id="clubs-sportifs" class="section level3">
 <h3>5.1 <a href="5.1_clubs.html">Clubs sportifs</a></h3>
+<p>Taux par fédération, structure / Poids des fédération et détail</p>
 </div>
 <div id="licences-sportives" class="section level3">
 <h3>5.2 <a href="5.2_licences.html">Licences sportives</a></h3>
+<p>Taux par fédération, structure, évolution / Poids des fédération et
+détail / Taux de licences féminines</p>
 </div>
 <div id="sport-de-nature" class="section level3">
 <h3>5.3 <a href="5.3_nature.html">Sport de nature</a></h3>
+<p>Sites et cartographie (cluster) par famille d’équipement sport de
+nature</p>
 </div>
 <div id="piscines" class="section level3">
 <h3>5.4 <a href="5.4_piscines.html">Piscines</a></h3>
+<p>Bassins publics, couverts, saisonniers / Surface natatoire / Temps
+d’accès</p>
 </div>
 <div id="équipements-sportifs" class="section level3">
 <h3>5.5 <a href="5.5_RES.html">Équipements sportifs</a></h3>
+<p>équipements et taux d’équipements par grande famille / Détail des
+équipements (couverts, proximité) / Analyse de carence</p>
 </div>
 </div>
 
