ajout du détail dans le sommaire

--- a/DRAJESBFC.html
+++ b/DRAJESBFC.html
@@ -449,16 +449,24 @@ publiées.</p>
 <h2>1. <strong>Généralités</strong></h2>
 <div id="territoires" class="section level3">
 <h3>1.1 <a href="1.1_demo.html">Territoire(s)</a></h3>
-<p>Population / Communes / Densité / ZRR / QPV / Appartenance
-géographique / CRTE</p>
+<ul>
+<li><p>Population, communes, densité</p></li>
+<li><p>Appartenance géographique : ZRR, QPV, CRTE</p></li>
+</ul>
 </div>
 <div id="structure-de-la-population" class="section level3">
 <h3>1.2 <a href="1.2_structure.html">Structure de la population</a></h3>
-<p>15-29 ans / + de 65 ans / indice de jeunesse</p>
+<ul>
+<li><p>15-29 ans / + de 65 ans</p></li>
+<li><p>Indice de jeunesse</p></li>
+</ul>
 </div>
 <div id="évolution-de-la-population" class="section level3">
 <h3>1.3 <a href="1.3_evol.html">Évolution de la population</a></h3>
-<p>évolution sur 5 ans par tranche d’âge / tendance longue</p>
+<ul>
+<li><p>Sur 5 ans par tranche d’âge</p></li>
+<li><p>Tendance longue</p></li>
+</ul>
 <hr />
 </div>
 </div>
@@ -466,17 +474,25 @@ géographique / CRTE</p>
 <h2>2. <strong>Jeunesse</strong></h2>
 <div id="jeunesse-1" class="section level3">
 <h3>2.1 <a href="2.1_jeunesse.html">Jeunesse</a></h3>
-<p>15-29 ans / 16-25 ans / évolution</p>
+<ul>
+<li><p>15-29 ans / 16-25 ans</p></li>
+<li><p>évolution sur 5 ans</p></li>
+</ul>
 </div>
 <div id="préscolaire" class="section level3">
 <h3>2.2 <a href="2.2_presco.html">Préscolaire</a></h3>
-<p>Accueils collectifs / accueil familial / taux de scolarisation /
-Assistantes maternelles / garde d’enfants à domicile</p>
+<ul>
+<li><p>Accueil collectif / familial</p></li>
+<li><p>Taux de scolarisation</p></li>
+<li><p>Assistantes maternelles et garde d’enfants à domicile</p></li>
+</ul>
 </div>
 <div id="accueils-collectifs-de-mineurs" class="section level3">
 <h3>2.3 <a href="2.3_ACM.html">Accueils collectifs de mineurs</a></h3>
-<p>Avec hébergement / Sans hébergement / Scoutisme / lieux d’accueil /
-places par groupe d’âge</p>
+<ul>
+<li><p>Avec hébergement / Sans hébergement / Scoutisme</p></li>
+<li><p>Lieux d’accueil et places par groupe d’âge</p></li>
+</ul>
 <hr />
 </div>
 </div>
@@ -484,12 +500,19 @@ places par groupe d’âge</p>
 <h2>3. <strong>Engagement</strong></h2>
 <div id="vie-associative" class="section level3">
 <h3>3.1 <a href="3.1_VA.html">Vie associative</a></h3>
-<p>Nombre et taux d’association / Domaine d’intervention</p>
+<ul>
+<li><p>Nombre d’associations et taux</p></li>
+<li><p>Domaine d’intervention</p></li>
+</ul>
 </div>
 <div id="service-civique" class="section level3">
 <h3>3.2 <a href="3.2_SC.html">Service civique</a></h3>
-<p>Nombre et évolution / domaine de mission / âge, diplôme, emploi /
-missions à l’étranger / QPV</p>
+<ul>
+<li><p>Nombre et évolution, domaine de mission</p></li>
+<li><p>âge, sexe, diplôme, emploi</p></li>
+<li><p>Missions à l’étranger</p></li>
+<li><p>Volontaires issus de QPV</p></li>
+</ul>
 <hr />
 </div>
 </div>
@@ -497,12 +520,17 @@ missions à l’étranger / QPV</p>
 <h2>4. <strong>Formation</strong></h2>
 <div id="diplômes" class="section level3">
 <h3>4.1 <a href="4.1_diplomes.html">Diplômes</a></h3>
-<p>Diplômes délivrés / par sexe, par âge / BAFA/BAFD / Insertion des
-diplômés</p>
+<ul>
+<li><p>Diplômes délivrés par sexe et âge</p></li>
+<li><p>BAFA / BAFD</p></li>
+<li><p>Insertion des diplômés</p></li>
+</ul>
 </div>
 <div id="organismes-de-formation" class="section level3">
 <h3>4.2 <a href="4.2_OF3.html">Organismes de formation</a></h3>
-<p>Carte interactive des OF de la région</p>
+<ul>
+<li>Carte interactive des OF de la région</li>
+</ul>
 <hr />
 </div>
 </div>
@@ -510,27 +538,42 @@ diplômés</p>
 <h2>5. <strong>Sport</strong></h2>
 <div id="clubs-sportifs" class="section level3">
 <h3>5.1 <a href="5.1_clubs.html">Clubs sportifs</a></h3>
-<p>Taux par fédération, structure / Poids des fédération et détail</p>
+<ul>
+<li><p>Taux de clubs par fédération, structure</p></li>
+<li><p>Poids des fédération et détail</p></li>
+<li><p>Licences par club</p></li>
+</ul>
 </div>
 <div id="licences-sportives" class="section level3">
 <h3>5.2 <a href="5.2_licences.html">Licences sportives</a></h3>
-<p>Taux par fédération, structure, évolution / Poids des fédération et
-détail / Taux de licences féminines</p>
+<ul>
+<li><p>Taux par fédération et par sexe, structure et évolution</p></li>
+<li><p>Poids des fédération et détail</p></li>
+<li><p>Taux de licences féminines et sports sexués</p></li>
+</ul>
 </div>
 <div id="sport-de-nature" class="section level3">
 <h3>5.3 <a href="5.3_nature.html">Sport de nature</a></h3>
-<p>Sites et cartographie (cluster) par famille d’équipement sport de
-nature</p>
+<ul>
+<li><p>Sites de sport nature par famille et détail</p></li>
+<li><p>cartographie détaillée et par cluster</p></li>
+</ul>
 </div>
 <div id="piscines" class="section level3">
 <h3>5.4 <a href="5.4_piscines.html">Piscines</a></h3>
-<p>Bassins publics, couverts, saisonniers / Surface natatoire / Temps
-d’accès</p>
+<ul>
+<li><p>Bassins publics, couverts, saisonniers</p></li>
+<li><p>Surface natatoire</p></li>
+<li><p>Temps d’accès aux bassins</p></li>
+</ul>
 </div>
 <div id="équipements-sportifs" class="section level3">
 <h3>5.5 <a href="5.5_RES.html">Équipements sportifs</a></h3>
-<p>équipements et taux d’équipements par grande famille / Détail des
-équipements (couverts, proximité) / Analyse de carence</p>
+<ul>
+<li><p>équipements et taux d’équipements par grande famille</p></li>
+<li><p>Détail des équipements (couverts, proximité)</p></li>
+<li><p>Analyse des carences par territoire</p></li>
+</ul>
 </div>
 </div>
 
