ajouts outils nationaux partie OF

--- a/4.2_OF3.html
+++ b/4.2_OF3.html
@@ -2592,110 +2592,70 @@ window.FlexDashboardComponents.push({
 
 <div id="dashboard-container">
 
-<div id="cartographie-des-of" class="section level1"
+<div id="calendrier-des-formations" class="section level1"
 data-orientation="rows" font-size="25px">
-<h1><svg aria-hidden="true" role="img" viewBox="0 0 576 512" style="height:1em;width:1.12em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:currentColor;overflow:visible;position:relative;"><path d="M288 0c-69.59 0-126 56.41-126 126 0 56.26 82.35 158.8 113.9 196.02 6.39 7.54 17.82 7.54 24.2 0C331.65 284.8 414 182.26 414 126 414 56.41 357.59 0 288 0zm0 168c-23.2 0-42-18.8-42-42s18.8-42 42-42 42 18.8 42 42-18.8 42-42 42zM20.12 215.95A32.006 32.006 0 0 0 0 245.66v250.32c0 11.32 11.43 19.06 21.94 14.86L160 448V214.92c-8.84-15.98-16.07-31.54-21.25-46.42L20.12 215.95zM288 359.67c-14.07 0-27.38-6.18-36.51-16.96-19.66-23.2-40.57-49.62-59.49-76.72v182l192 64V266c-18.92 27.09-39.82 53.52-59.49 76.72-9.13 10.77-22.44 16.95-36.51 16.95zm266.06-198.51L416 224v288l139.88-55.95A31.996 31.996 0 0 0 576 426.34V176.02c0-11.32-11.43-19.06-21.94-14.86z"/></svg>
-Cartographie des OF</h1>
+<h1><svg aria-hidden="true" role="img" viewBox="0 0 448 512" style="height:1em;width:0.88em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:currentColor;overflow:visible;position:relative;"><path d="M436 160H12c-6.627 0-12-5.373-12-12v-36c0-26.51 21.49-48 48-48h48V12c0-6.627 5.373-12 12-12h40c6.627 0 12 5.373 12 12v52h128V12c0-6.627 5.373-12 12-12h40c6.627 0 12 5.373 12 12v52h48c26.51 0 48 21.49 48 48v36c0 6.627-5.373 12-12 12zM12 192h424c6.627 0 12 5.373 12 12v260c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V204c0-6.627 5.373-12 12-12zm333.296 95.947l-28.169-28.398c-4.667-4.705-12.265-4.736-16.97-.068L194.12 364.665l-45.98-46.352c-4.667-4.705-12.266-4.736-16.971-.068l-28.397 28.17c-4.705 4.667-4.736 12.265-.068 16.97l82.601 83.269c4.667 4.705 12.265 4.736 16.97.068l142.953-141.805c4.705-4.667 4.736-12.265.068-16.97z"/></svg>
+Calendrier des formations</h1>
 <div id="row" class="section level2" data-height="20">
 <h2>Row</h2>
 </div>
 <div id="row-1" class="section level2" data-height="100">
 <h2>Row</h2>
 <p><strong>Cartographie interactive</strong><br />
-<a href="https://pierre-stephanelebre.shinyapps.io/FCEshiny/"><img
-src="images/FCE.PNG" /> </br><br />
-Visualisation des OF de la région</a></p>
+<a href="https://foromes.calendrier.sports.gouv.fr/#/formation"><img
+src="images/calendrier.png" /> </br><br />
+Calendrier des formations du ministère des Sports</a></p>
 </div>
 </div>
-<div id="en-savoir" class="section level1" data-orientation="rows"
-data-icon="fa-info-circle" font-size="25px">
-<h1><em>En savoir</em> <strong>+</strong></h1>
+<div id="cartographie-nationale-des-of" class="section level1"
+data-orientation="rows" font-size="25px">
+<h1><svg aria-hidden="true" role="img" viewBox="0 0 288 512" style="height:1em;width:0.56em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:currentColor;overflow:visible;position:relative;"><path d="M112 316.94v156.69l22.02 33.02c4.75 7.12 15.22 7.12 19.97 0L176 473.63V316.94c-10.39 1.92-21.06 3.06-32 3.06s-21.61-1.14-32-3.06zM144 0C64.47 0 0 64.47 0 144s64.47 144 144 144 144-64.47 144-144S223.53 0 144 0zm0 76c-37.5 0-68 30.5-68 68 0 6.62-5.38 12-12 12s-12-5.38-12-12c0-50.73 41.28-92 92-92 6.62 0 12 5.38 12 12s-5.38 12-12 12z"/></svg>
+Cartographie nationale des OF</h1>
 <div id="row-2" class="section level2" data-height="20">
 <h2>Row</h2>
 </div>
-<div id="row-3" class="section level2" data-height="200">
+<div id="row-3" class="section level2" data-height="100">
 <h2>Row</h2>
-<p><strong>Cartographie interactive</strong><br />
-<a href="https://pierre-stephanelebre.shinyapps.io/FCEshiny/"><img
-src="images/FCE.PNG" /> </br><br />
-Visualisation des OF de la région</a></p>
+<p>Forômes-Exploit est une cartographie interactive des formations en
+cours ou à venir en France métropolitaine et Outre-mer pour les diplômes
+d’Etat professionnels délivrés par les ministères chargés de la Jeunesse
+et des Sports.</p>
+<p><strong>Cartographie Foromes-exploit</strong><br />
+<a href="https://donnees-formation-js.social.gouv.fr/"><img
+src="images/exploit.PNG" /> </br><br />
+Cartographie nationale des formations en cours ou à venir</a></p>
 </div>
 </div>
-<div id="navigation" class="section level1" data-orientation="rows"
-data-icon="fa-map-signs" font-size="25px">
-<h1>Navigation</h1>
+<div id="cartographie-des-of" class="section level1"
+data-orientation="rows" font-size="25px">
+<h1><svg aria-hidden="true" role="img" viewBox="0 0 576 512" style="height:1em;width:1.12em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:currentColor;overflow:visible;position:relative;"><path d="M288 0c-69.59 0-126 56.41-126 126 0 56.26 82.35 158.8 113.9 196.02 6.39 7.54 17.82 7.54 24.2 0C331.65 284.8 414 182.26 414 126 414 56.41 357.59 0 288 0zm0 168c-23.2 0-42-18.8-42-42s18.8-42 42-42 42 18.8 42 42-18.8 42-42 42zM20.12 215.95A32.006 32.006 0 0 0 0 245.66v250.32c0 11.32 11.43 19.06 21.94 14.86L160 448V214.92c-8.84-15.98-16.07-31.54-21.25-46.42L20.12 215.95zM288 359.67c-14.07 0-27.38-6.18-36.51-16.96-19.66-23.2-40.57-49.62-59.49-76.72v182l192 64V266c-18.92 27.09-39.82 53.52-59.49 76.72-9.13 10.77-22.44 16.95-36.51 16.95zm266.06-198.51L416 224v288l139.88-55.95A31.996 31.996 0 0 0 576 426.34V176.02c0-11.32-11.43-19.06-21.94-14.86z"/></svg>
+Cartographie des OF</h1>
 <div id="row-4" class="section level2" data-height="20">
 <h2>Row</h2>
 </div>
 <div id="row-5" class="section level2" data-height="100">
 <h2>Row</h2>
-<ol style="list-style-type: decimal">
-<li><strong>Généralités</strong><br />
-</li>
-</ol>
-<ul>
-<li><a href="1.1_demo.html">Territoire(s)</a><br />
-</li>
-<li><a href="1.2_structure.html">Structure de la population</a><br />
-</li>
-<li><a href="1.3_evol.html">évolution de la population</a></li>
-</ul>
+<p><strong>Cartographie interactive</strong><br />
+<a href="https://pierre-stephanelebre.shinyapps.io/FCEshiny/"><img
+src="images/FCE.PNG" /> </br><br />
+Visualisation des Oragnismes de Formation de la région</a></p>
 </div>
-<div id="row-6" class="section level2" data-height="100">
-<h2>Row</h2>
-<ol start="2" style="list-style-type: decimal">
-<li><strong>Jeunesse</strong><br />
-</li>
-</ol>
-<ul>
-<li><a href="2.1_jeunesse.html">Jeunesse</a><br />
-</li>
-<li><a href="2.2_presco.html">Préscolaire</a><br />
-</li>
-<li><a href="2.3_ACM.html">Accueils collectifs de mineurs</a></li>
-</ul>
 </div>
-<div id="row-7" class="section level2" data-height="100">
+<div id="en-savoir" class="section level1" data-orientation="rows"
+data-icon="fa-info-circle" font-size="25px">
+<h1><em>En savoir</em> <strong>+</strong></h1>
+<div id="row-6" class="section level2" data-height="20">
 <h2>Row</h2>
-<ol start="3" style="list-style-type: decimal">
-<li><strong>Engagement</strong><br />
-</li>
-</ol>
-<ul>
-<li><a href="3.1_VA.html">Vie associative</a><br />
-</li>
-<li><a href="3.2_SC.html">Service civique</a></li>
-</ul>
 </div>
-<div id="row-8" class="section level2" data-height="100">
+<div id="row-7" class="section level2" data-height="200">
 <h2>Row</h2>
-<ol start="4" style="list-style-type: decimal">
-<li><strong>Formation</strong><br />
-</li>
-</ol>
-<ul>
-<li><a href="4.1_diplomes.html">Diplômes</a><br />
-</li>
-<li><a href="4.2_OF3.html">Organismes de formation</a></li>
-</ul>
-</div>
-<div id="row-9" class="section level2" data-height="100">
-<h2>Row</h2>
-<ol start="5" style="list-style-type: decimal">
-<li><strong>Sport</strong><br />
-</li>
-</ol>
-<ul>
-<li><a href="5.1_clubs.html">Clubs sportifs</a><br />
-</li>
-<li><a href="5.2_licences.html">Licences sportives</a><br />
-</li>
-<li><a href="5.3_nature.html">Sport de nature</a><br />
-</li>
-<li><a href="5.4_piscines.html">Piscines</a><br />
-</li>
-<li><a href="5.5_RES.html">équipements sportifs</a></li>
-</ul>
+<p>Sur le site du ministère des Sports rubrique Emplois et métiers : <a
+href="https://www.sports.gouv.fr/emplois-metiers/offres-de-formations/calendrier-des-formations/Calendrier-des-formations-15145"
+class="uri">https://www.sports.gouv.fr/emplois-metiers/offres-de-formations/calendrier-des-formations/Calendrier-des-formations-15145</a></p>
+<p>L’exploitation de l’outil de gestion des formations et des diplômes
+(Voir rubrique Aide et à propos) : <a
+href="https://donnees-formation-js.social.gouv.fr/"
+class="uri">https://donnees-formation-js.social.gouv.fr/</a></p>
 </div>
 </div>
 
