--- a/DRAJESBFC.html
+++ b/DRAJESBFC.html
@@ -559,7 +559,7 @@ class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em
 <li><p><a
 href="4.1_diplomes.html#diplômes-non-professionnels-bafabafd">BAFA /
 BAFD</a> <span
-class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em></span></p></li>
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>, <em>S</em><em>p</em><em>a</em><em>r</em><em>k</em><em>l</em><em>i</em><em>n</em><em>e</em></span></p></li>
 <li><p><a href="4.1_diplomes.html#insertion-des-diplômés">Insertion des
 diplômés</a></p></li>
 </ul>
@@ -591,7 +591,8 @@ structure</p></li>
 class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>, <em>E</em><em>P</em><em>C</em><em>I</em>, <em>B</em><em>V</em></span></p>
 <ul>
 <li><p>Nombre et taux par fédération et par sexe, carte, structure et
-évolution</p></li>
+évolution <span
+class="math inline"><em>S</em><em>p</em><em>a</em><em>r</em><em>k</em><em>l</em><em>i</em><em>n</em><em>e</em></span></p></li>
 <li><p>Poids des fédération et détail</p></li>
 <li><p>Taux de licences féminines et sports sexués</p></li>
 </ul>
