ajout stat diplômes

--- a/DRAJESBFC.html
+++ b/DRAJESBFC.html
@@ -13,7 +13,7 @@
 
 <title>Chiffres clés Jeunesse Engagement Sports Bourgogne-Franche-Comté</title>
 
-<script src="site_libs/header-attrs-2.17/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.18/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
@@ -398,6 +398,9 @@ div.tocify {
     <li>
       <a href="5.5_RES.html">équipements sportifs</a>
     </li>
+    <li>
+      <a href="5.5_JO.html">Jeux Olympiques</a>
+    </li>
   </ul>
 </li>
       </ul>
@@ -619,6 +622,15 @@ class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em
 <li><p>Détail des équipements (couverts, proximité), carte</p></li>
 <li><p><a href="5.5_RES.html#analyse-des-territoires">Analyse des
 carences par territoire</a></p></li>
+</ul>
+</div>
+<div id="jeux-olympiques" class="section level3">
+<h3>5.6 <a href="5.6_JO.html">Jeux Olympiques</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em></span></p>
+<ul>
+<li><p>Territoires Terres de Jeux</p></li>
+<li><p>Centres de préparations aux Jeux Olympiques</p></li>
 </ul>
 </div>
 </div>
