--- a/Lisez-moi.html
+++ b/Lisez-moi.html
@@ -14,7 +14,7 @@
 
 <title>Lisez-moi</title>
 
-<script src="site_libs/header-attrs-2.17/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.18/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
@@ -404,6 +404,9 @@ div.tocify {
     </li>
     <li>
       <a href="5.5_RES.html">équipements sportifs</a>
+    </li>
+    <li>
+      <a href="5.5_JO.html">Jeux Olympiques</a>
     </li>
   </ul>
 </li>
